--- a/Web/templates/query.html
+++ b/Web/templates/query.html
@@ -1,103 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>wounderfulchina</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://d19m59y37dris4.cloudfront.net/directory/1-4-1/css/style.default.afb5697e.css"
+        id="theme-stylesheet"> -->
     <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <style>
-    .dropdown-menu a:hover {
-      background-color: #4b5866;
-    }
+        .dropdown-menu a:hover {
+            background-color: #4b5866;
+        }
     </style>
 
 </head>
+
 <body>
 
     <div class="container-fluid">
-                <!-- 导航栏 -->
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+        <!-- 导航栏 -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top style=" height: 8%;"">
             <a class="navbar-brand" href="index">HOME</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link" href="subscribe_article">文章订阅</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">仓管系统</a>
-                    <div class="dropdown-menu" style="background-color: #343a40;">
-                      <a class="dropdown-item" style="color: #fafbfb;" href="input"><span>录入</span></a>
-                      <a class="dropdown-item" style="color: #fafbfb;" href="query_web">查询</a>
-                    </div>
-                  </li> 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">格式转换</a>
-                </li> 
-            </ul>
-            </div>  
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="subscribe_article">文章订阅</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">仓管系统</a>
+                        <div class="dropdown-menu" style="background-color: #343a40;">
+                            <a class="dropdown-item" style="color: #fafbfb;" href="input"><span>录入</span></a>
+                            <a class="dropdown-item" style="color: #fafbfb;" href="query_web">查询</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">格式转换</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-        <br/> <br/>
+        <br /> <br />
         <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="Logo.jpeg" alt="" width="150">
             <h3> <span class="text-muted">仓管系统（查询）</span></h3>
-            <p class="lead" style="margin-top: 30px; margin-left: 300px; margin-bottom: 10px; margin-right: 300px; font-size: 18px;"> 为了有效管理实验室物资，我们强烈建议您使用仓库管理系统，每当有人购置新的设备或者耗材，就录入系统，并由专人管理。真正做到心中有数，实验不慌。</p>
+            <p class="lead"
+                style="margin-top: 30px; margin-left: 300px; margin-bottom: 10px; margin-right: 300px; font-size: 18px;">
+                为了有效管理实验室物资，我们强烈建议您使用仓库管理系统，每当有人购置新的设备或者耗材，就录入系统，并由专人管理。真正做到心中有数，实验不慌。</p>
         </div>
         <div>
-        <form action="http://localhost:5000/query" method="POST" class="was-validated">
-        <div class="row" style="margin-top: 2%;">
-            <div class="col-md-4">
-            </div>
-            <div class="col-md-2">
-                <h4 style="text-align: right;">选择查询内容</h4>
-            </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                <select class="custom-select d-block w-100" name="category" id="category" required="">
-                    <option value="">Choose...</option>
-                    <option>All</option>
-                    <option>关键词</option>
-                    <option>购买自（公司）</option>
-                    <option>设备类型</option>
-                    <option>购买人</option>
-                    <option>购买时间（格式：2020-01-01---2020-02-01）</option>
-                </select>
-                <div class="invalid-feedback">
-                    Please select a valid category.
-                </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-            </div>
-        </div>
+            <style>
+                /* style for search bar */
+                .search-bar {
+                    border-radius: 10rem;
+                    background: #fff;
+                    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.15)
+                }
 
-        <div class="invalid-feedback">
-            Please select a valid category.
-        </div>
-        <div class="row" style="margin-top: 2%;">
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-5 text-right">
-                <div class="form-group">
-                    <input class="form-control form-control-lg" type="text" name="keywords" placeholder="Search..." aria-label="Search">
-                    <div class="invalid-feedback">
-                        Please enter something.
+                .search-bar .form-group {
+                    position: relative;
+                    margin-bottom: 0
+                }
+
+                .search-bar .form-group::after {
+                    display: block;
+                    width: 1px;
+                    height: 60%;
+                    content: '';
+                    background: #ddd;
+                    position: absolute;
+                    top: 20%;
+                    right: 0
+                }
+
+                .search-bar .form-group.no-divider::after,
+                .search-bar .form-group:last-of-type::after {
+                    display: none
+                }
+
+                .search-bar .form-control {
+                    height: calc(1.5em + 1rem + 2px)
+                }
+
+                .search-bar .input-label-absolute-right .label-absolute {
+                    right: 0
+                }
+
+                .search-bar.search-bar-with-tabs {
+                    border-radius: .4rem
+                }
+
+                @media (max-width: 991.98px) {
+                    .search-bar {
+                        border-radius: 20px
+                    }
+
+                    .search-bar .form-group {
+                        margin-bottom: 1rem
+                    }
+
+                    .search-bar .form-group::after {
+                        display: block;
+                        width: calc(100% - 4rem);
+                        height: 1px;
+                        content: '';
+                        -webkit-transform: translateX(-50%);
+                        transform: translateX(-50%);
+                        background: #dee2e6;
+                        position: absolute;
+                        top: auto;
+                        right: auto;
+                        bottom: 0;
+                        left: 50%
+                    }
+
+                    .search-bar .form-control {
+                        height: calc(1.6em + .75rem + 2px);
+                        padding: 10px 20px
+                    }
+
+                    .search-bar .input-label-absolute-right .label-absolute {
+                        right: 1rem
+                    }
+
+                    .search-bar .bootstrap-select {
+                        display: block !important;
+                        width: 100% !important;
+                        padding: 0
+                    }
+
+                    .search-bar .bootstrap-select button {
+                        display: block;
+                        width: 100% !important;
+                        padding: 10px 20px
+                    }
+                }
+
+                .nav-tabs.search-bar-nav-tabs {
+                    border-bottom: none
+                }
+
+                .nav-tabs.search-bar-nav-tabs .nav-link {
+                    padding: 1rem 2rem 1.5rem;
+                    margin-bottom: -10px;
+                    font-weight: bold;
+                    border: 1px solid transparent;
+                    color: #495057;
+                    background-color: rgba(255, 255, 255, 0.5);
+                    transition: all .2s ease-out;
+                    border-top-left-radius: .4rem;
+                    border-top-right-radius: .4rem
+                }
+
+                .nav-tabs.search-bar-nav-tabs .nav-link:hover,
+                .nav-tabs.search-bar-nav-tabs .nav-link:focus {
+                    color: #495057;
+                    background-color: rgba(255, 255, 255, 0.8)
+                }
+
+                .nav-tabs.search-bar-nav-tabs .nav-link.active,
+                .nav-tabs.search-bar-nav-tabs .nav-item.show .nav-link {
+                    color: #4E66F8;
+                    background-color: #fff;
+                    border-color: #fff
+                }
+
+                .rounded-xl {
+                    border-radius: 10rem
+                }
+            </style>
+            <form action="http://localhost:5000/query" method="POST">
+                <div class="container py-3">
+                    <div class="row">
+                        <div class="col-xl-2">
+                        </div>
+                        <div class="col-xl-8">
+                            <div class="search-bar mt-5 p-3 p-lg-1 pl-lg-4">
+
+                                <div class="row">
+                                    <div class="col-lg-3 d-flex align-items-center form-group">
+                                        <input type="text" name="ckName" placeholder="仓库 ID"
+                                            class="form-control border-0 shadow-0" required="">
+                                        <div class="invalid-feedback">
+                                            Please enter ID.
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 d-flex align-items-center form-group">
+
+                                        <input type="text" name="keywords" placeholder="Search" id="keywords"
+                                            class="form-control border-0 shadow-0" required="">
+
+                                    </div>
+                                    <div class="col-lg-4 d-flex align-items-center form-group no-divider">
+                                        <div class="dropdown bootstrap-select">
+                                            <div class="form-group">
+                                                <select class="custom-select d-block w-100" name="category"
+                                                    id="category" required="" style="color: #899097; border: 0;">
+                                                    <option value="">Choose...</option>
+                                                    <option>All</option>
+                                                    <option>关键词</option>
+                                                    <option>购买自（公司）</option>
+                                                    <option>设备类型</option>
+                                                    <option>购买人</option>
+                                                    <option>购买时间（格式：2020-01-01---2020-02-01）</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-2">
+                                        <button type="submit" class="btn btn-primary btn-block rounded-xl h-100">Search
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="col-xl-2">
+
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-md-2 text-left">
-                <button class="btn btn-outline-success btn-lg" type="submit">Search</button>
-            </div>
-            <div class="col-md-2">
-            </div>
-        </div>
-        </form>
+            </form>
         </div>
     </div>
+
 </body>
+
 </html>
