文章爬虫调试完毕

--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -74,7 +74,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">格式转换</a>
+            <a class="nav-link" href="format">格式转换</a>
           </li>
         </ul>
       </div>
@@ -152,7 +152,7 @@
               发篇文章好烦人！每种期刊都有自己特有的格式，图片，内容，参考文献，投一遍改一遍，改到头秃。格式转换工具可以帮助您在一次完成正文内容后，只需要点点鼠标，就能快速转换期刊格式，这下妈妈再也不用担心你没有文章了。
             </p>
             <p>
-              <a class="btn btn-secondary" href="#" role="button">View details »</a>
+              <a class="btn btn-secondary" href="format" role="button">View details »</a>
             </p>
           </div>
         </div>
