--- a/Web/templates/input.html
+++ b/Web/templates/input.html
@@ -54,7 +54,7 @@
                 <div class="col-md-6">
                     <p class="lead" style="line-height: 2; font-size: 18px">
                         <!-- <p class="lead" style="margin-top: 30px; margin-left: 300px; margin-bottom: 10px; margin-right: 300px; font-size: 18px;"> -->
-                        为了有效管理实验室物资，我们强烈建议您使用仓库管理系统，每当有人购置新的设备或者耗材，就录入系统，并由专人管理。真正做到心中有数，实验不慌。
+                        为了有效管理实验室物资，我们强烈建议您使用仓库管理系统，每当有人购置新的设备或者耗材，就录入系统，并由专人管理。真正做到心中有数，实验不慌。建议为每个小组设立单独的仓库ID，方便后面的查找，并且在不知道仓库ID的情况下避免了别人通过网页查看贵组的实验设备。
                     </p>
                 </div>
                 <div class="col-md-3">
