--- a/Web/templates/query.html
+++ b/Web/templates/query.html
@@ -56,7 +56,8 @@
                 <div class="col-md-6">
                     <p class="lead" style="line-height: 2; font-size: 18px">
                         <!-- <p class="lead" style="margin-top: 30px; margin-left: 300px; margin-bottom: 10px; margin-right: 300px; font-size: 18px;"> -->
-                        为了有效管理实验室物资，我们强烈建议您使用仓库管理系统，每当有人购置新的设备或者耗材，就录入系统，并由专人管理。真正做到心中有数，实验不慌。
+                        为了有效管理实验室物资，我们强烈建议您使用仓库管理系统，每当有人购置新的设备或者耗材，就录入系统，并由专人管理。真正做到心中有数，实验不慌。在下面的搜索框中输入您要检索的仓库ID，搜索内容和检索条目，查看设备信息。
+                        例如可以在 ID：example 下，搜索 购买人， 张三，可以查看由张三购买的设备。
                     </p>
                 </div>
                 <div class="col-md-3">
