--- a/Web/templates/subscribe_article.html
+++ b/Web/templates/subscribe_article.html
@@ -55,7 +55,7 @@
                 <div class="col-md-6">
                     <p class="lead" style="line-height: 2; font-size: 18px">
                         <!-- <p class="lead" style="margin-top: 30px; margin-left: 300px; margin-bottom: 10px; margin-right: 300px; font-size: 18px;"> -->
-                        补充下面的信息，即刻起订阅您感兴趣的文章。随着受众的增加，我们会根据大家的需求逐步增加所支持订阅期刊的种类。我们保证不会泄漏您的私人信息
+                        补充下面的信息，即刻起根据作或关键词信息订阅您感兴趣的文章。随着受众的增加，我们会根据大家的需求逐步增加所支持订阅期刊的种类。我们保证不会泄漏您的私人信息。订阅的文章信息将会在每周一至周五的上午10:00左右发送到您的邮箱。
                     </p>
                 </div>
                 <div class="col-md-3">
@@ -100,6 +100,7 @@
                         <select class="custom-select d-block w-100" name="article" id="journal" required="">
                             <option value="">Choose...</option>
                             <option>arXiv-quant-ph</option>
+                            <option>arXiv-physics.optics</option>
                         </select>
                         <div class="invalid-feedback">
                             Please select a valid journal.
